Wed May 18 04:50:24 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/ftp.rb:  Improve documentation.  Patch by Vincent Batts.
	  [Ruby 1.9 - Bug #4710]

Wed May 18 03:14:49 2011  Eric Hodel  <drbrain@segment7.net>

	* test/test_singleton.rb:  Add tests from lib/singleton.rb.  Patch by
	  Pete Higgins.  [Ruby 1.9 - Bug #4715]

Wed May 18 03:03:07 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/singleton.rb:  Improve documentation.  Patch by Pete Higgins.
	  [Ruby 1.9 - Bug #4709]

Wed May 18 01:02:53 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* test/ruby/test_io.rb (TestIO#test_O_CLOEXEC): add null check.

Tue May 17 21:24:04 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* thread.c (rb_mutex_lock): remove remove_signal_thread_list() call.
	  It's meaningless because lock_interrupt doesn't call
	  add_signal_thread_list().

Tue May 17 20:20:49 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* vm_core.h (rb_thread_struct): add volatile to
	  transition_for_lock because it is not protected by lock.

Tue May 17 20:08:53 2011  NAKAMURA Usaku  <usa@ruby-lang.org>

	* LEGAL (missing/{elf,tgamma,lgamma_r}.c): they've been replaced by
	  public domain implementations.

	* LEGAL (vsnprintf.c): it has moved to srcdir from missing/.

	* LEGAL (missing/crypt.c): list its original license.

Tue May 17 19:54:26 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>

	* LEGAL (configure): add missing/setproctitle.c

Tue May 17 19:35:01 2011  KOSAKI Motohiro  <kosaki.motohiro@gmail.com>
	Fix FreeBSD test failure.

	* test/ruby/test_rubyoptions.rb	(TestRubyOptions#test_set_program_name):
	  use ps -o command instead of ps -o cmd. FreeBSD doesn't support
	  -o cmd option.

Tue May 17 08:04:26 2011  Martin Bosslet  <Martin.Bosslet@googlemail.com>

	* ext/openssl/ossl_digest.c: Add documentation.

Tue May 17 07:14:58 2011  Eric Hodel  <drbrain@segment7.net>

	* lib/net/http.rb:  Improve documentation of proxy configuration