@@ -1,3 +1,8 @@
+Wed May 18 04:53:41 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* lib/cmath.rb:  Improve documentation.  Patch by Jason Dew.
+	  [Ruby 1.9 - Feature #4717]
+
 Wed May 18 04:50:24 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/net/ftp.rb:  Improve documentation.  Patch by Vincent Batts.
